# Secure_MCP

./: .gitignore  ACTUAL_IMPLEMENTATION_OVERVIEW.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_TEST_RESULTS.md  DOCUMENT_ALIGNMENT_ANALYSIS.md  FRAMEWORK_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_MAS_SUMMARY.md  LICENSE  MCP_FRAMEWORK_COMPARISON_REPORT.md  Makefile  PHASE2_PLAN.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_STATUS.md  README.md  README_DEMO.md  README_REAL_IMPLEMENTATION.md  README_TESTING.md  REAL_INDUSTRY_VALIDATION_METRICS.md  SECUREMCP_REPORT Draft.docx  SECURITY_VALIDATION_METRICS.md  SEVEN_VALIDATION_METRICS.md  complete_demo.py  demo_framework.py  download_models.py  hf_agent_demo.py  hf_config.py  implementation_plan.md  main.py  main_original.py  monitor.py  pyproject.toml  pytest.ini  real_production_demo.py  requirements.txt  requirements_demo.txt  requirements_real.txt  requirements_test.txt  run_comprehensive_tests.py  run_demo.bat  (+19 more)
architecture/: secure_mas_architecture.md
archive/: ACTUAL_VALIDATION_METRICS.md  COMPREHENSIVE_PROJECT_SUMMARY.md  ENHANCED_FEATURES_SUMMARY.md  TOP_7_SECURITY_METRICS.md
benchmark/: REAL_MCP_FRAMEWORK_BENCHMARK_RESULTS.md  optimized_real_benchmark.py  optimized_real_benchmark_results.json
config/: env_config.py  security_config.yaml
examples/: basic_secure_agent_example.py  basic_usage.py  benchmarking_demo.py  comprehensive_security_demo.py  enhanced_security_demo.py  fixed_secure_agent_example.py  langgraph_document_processing_demo.py  real_mas_prototype.py  simple_mcp_server.py
integration/: mcp_security_gateway.py
langgraph_mas/: document_processing_workflow.py  secure_langgraph_agent.py
mcp_security_framework/: __init__.py
mcp_security_framework/adapters/: __init__.py  autogen.py  base.py  crewai.py  langgraph.py
mcp_security_framework/benchmarking/: __init__.py  benchmark_reporter.py  benchmark_runner.py  compliance_benchmarker.py  industry_validation_metrics.py  metrics_collector.py  performance_benchmarker.py  real_benchmarker.py  real_industry_benchmarker.py  security_benchmarker.py
mcp_security_framework/core/: __init__.py  enhanced_gateway.py  gateway.py  identity.py  policy.py  real_gateway.py  real_identity.py  real_policy.py  real_trust.py  registry.py  trust.py
mcp_security_framework/models/: __init__.py  real_models.py
mcp_security_framework/security/adaptation/: adaptive_security.py
mcp_security_framework/security/advanced/: __init__.py  advanced_behavioral_analysis.py  dynamic_trust_manager.py  maestro_layer_security.py
mcp_security_framework/security/analysis/: role_based_security.py  topological_analysis.py
mcp_security_framework/security/communication/: secure_communication.py
mcp_security_framework/security/fault_tolerance/: fault_tolerance_analyzer.py
mcp_security_framework/security/incident/: incident_response.py
mcp_security_framework/security/monitoring/: advanced_monitoring.py
mcp_security_framework/utils/: __init__.py  config.py  crypto.py  logging.py
policies/: default_policies.yaml
research/: threat_model.md
research/literature/: mcp_security_analysis.md
security/analysis/: __init__.py  role_based_security.py  security_analyzer.py  topological_analysis.py
security/authentication/: identity_management.py
security/incident/: __init__.py
tests/: __init__.py  conftest.py  test_identity.py
tests/integration/: __init__.py  test_benchmarking_integration.py  test_complete_framework_integration.py  test_framework_integration.py
tests/unit/: __init__.py  test_identity_manager.py  test_identity_manager_complete.py  test_policy_engine.py  test_policy_engine_simple.py  test_policy_engine_working.py  test_real_models.py  test_trust_calculator.py  test_trust_calculator_complete.py
tests/unit_tests/: test_identity_management.py
trust/: trust_calculator.py
venv_312/: pyvenv.cfg
venv_312/Scripts/: activate  activate.bat
(+4 files in other folders)
